--- a/eSavjetovaliste/app/views/layouts/application.html.erb
+++ b/eSavjetovaliste/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
+<!-- app/views/layouts/application.html.erb -->
+
 <!DOCTYPE html>
-<html>
+<html ng-app="registration">
 <head>
-  <title>ESavjetovaliste</title>
+  <title>eSavjetovaliste</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
-
+  <%= yield %>  
+  <div class="footer">
+  	<div  id="copyright">© Copyright 2015</div>
+  </div>
 </body>
-</html>
