--- a/eSavjetovaliste/app/views/layouts/application.html.erb
+++ b/eSavjetovaliste/app/views/layouts/application.html.erb
@@ -10,8 +10,16 @@
 </head>
 <body>
 
-  <%= yield %>  
+	<div class="container">
+		<ul class="nav nav-tabs">
+			<li><%=link_to "Registration", root_path %></li>
+		</ul>
+
+	  <%= yield %>  
+
+
   <div class="footer">
   	<div  id="copyright">© Copyright 2015</div>
   </div>
+  	</div>
 </body>
