--- a/eSavjetovaliste/app/assets/stylesheets/application.css.scss
+++ b/eSavjetovaliste/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,88 @@
 @import "bootstrap";
+
+.form-signin
+{
+    max-width: 330px;
+    padding: 0px;
+    margin: 0 auto;
+}
+
+.form-signin .checkbox
+{
+    font-weight: normal;
+}
+.form-signin .form-control
+{
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    
+}
+.form-signin .form-control:focus
+{
+    z-index: 2;
+}
+.form-control
+{
+    width:300px;
+}
+.form-signin input[type="text"]
+{
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.form-signin input[type="password"]
+{
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.account-wall
+{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px 0px 10px 0px;
+    background-color: #000000;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+
+    opacity:0.9;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -250px;
+    margin-top: -150px;
+    width: 400px;
+    height: 260px;
+}
+.login-title
+{
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 400;
+    display: block;
+}
+.new-account
+{
+    margin-top: 10px;
+}
+.checkbox
+{
+    color: #ffffff;
+}
+html { 
+  background: url('/assets/bcgnwt1.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+#copyright{
+	position:absolute;
+   bottom:0;
+   left: 42%;
+}
