--- a/eSavjetovaliste/app/views/layouts/application.html.erb
+++ b/eSavjetovaliste/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 	<div class="container">
 		<ul class="nav nav-tabs">
-			<li><%=link_to "Registration", root_path %></li>
+			<!--<li><%=link_to "Registration", root_path %></li>-->
 		</ul>
 
 	  <%= yield %>  
