--- a/eSavjetovaliste/app/views/static_pages/index.html.erb
+++ b/eSavjetovaliste/app/views/static_pages/index.html.erb
@@ -89,3 +89,48 @@
 
     </div>
 </div>
+
+<!-- forma koja se otvori nakon klika na zaboravio si racun-->
+<!--<div class="container">
+            
+            <div class="forgot-acc">
+
+                <div class="form-signin" ng-controller="LoginControler">
+                	<h1 class="text-center login-title">eSavjetovaliste</h1>
+
+					<div class="input-prepend">
+      					<span class="add-on"><i class="icon-envelope"></i></span>
+      					<input type="text" class="form-control" name="email" placeholder="Email" ng-model="user.email" required autofocus>
+    				</div>
+
+	                <button class="btn btn-lg btn-primary btn-block" ng-click="forgotAcc()"  ng-disabled="loginForm.$invalid">Prijavite se</button>
+
+                </div>
+
+    </div>
+</div>-->
+
+<!--forma koja se otvori za reset passworda-->
+<!--<div class="container">
+            
+            <div class="forgot-acc">
+
+                <div class="form-signin" ng-controller="LoginControler">
+                	<h1 class="text-center login-title">eSavjetovaliste</h1>
+
+					<div class="input-prepend">
+		      			<span class="add-on"><i class="icon-lock"></i></span>
+					  	<input name="password" type="password" class="formr-control" placeholder="Password" ng-model="user.password" />
+					</div>
+
+					<div class="input-prepend">
+		      			<span class="add-on"><i class="icon-lock"></i></span>
+					  	<input name="passwordc" type="password" class="formr-control" placeholder= "Password Confirmation" ng-model="user.password_confirmation" />
+					</div>
+
+	                <button class="btn btn-lg btn-primary btn-block" ng-click="resetPass()"  ng-disabled="loginForm.$invalid">Prijavite se</button>
+
+                </div>
+
+    </div>
+</div>-->
