--- a/eSavjetovaliste/app/views/layouts/application.html.erb
+++ b/eSavjetovaliste/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/layouts/application.html.erb -->
 
 <!DOCTYPE html>
-<html ng-app="registration">
+<html ng-app="controllers">
 <head>
   <title>eSavjetovaliste</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
