--- a/eSavjetovaliste/app/views/static_pages/index.html.erb
+++ b/eSavjetovaliste/app/views/static_pages/index.html.erb
@@ -91,7 +91,7 @@
 </div>-->
 
 <!-- forma koja se otvori nakon klika na zaboravio si racun-->
-<<div class="container">
+<div class="container">
             
             <div class="forgot-acc">
 
