--- a/eSavjetovaliste/app/views/static_pages/index.html.erb
+++ b/eSavjetovaliste/app/views/static_pages/index.html.erb
@@ -1,4 +1,8 @@
-
+<div ng-app="esavjetovaliste">
+  <div class="view-container">
+    <div ng-view class="view-frame animate-view"></div>
+  </div>
+</div>
 <!--<div class="container">    
     <div class="register-wall">
 		<div class="form-register" ng-controller="RegistrationControler">
@@ -57,7 +61,7 @@
 		</div>
 	</div>
 </div>-->
-
+<!--
 <div class="container">
             
             <div class="account-wall">
@@ -89,7 +93,7 @@
 
     </div>
 </div>
-
+-->
 <!-- forma koja se otvori nakon klika na zaboravio si racun-->
 <!--<div class="container">
             
