--- a/eSavjetovaliste/app/assets/stylesheets/application.css.scss
+++ b/eSavjetovaliste/app/assets/stylesheets/application.css.scss
@@ -106,6 +106,26 @@ html {
     width: 400px;
     height: 500px;
 }
+.change-wall
+{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px 0px 10px 0px;
+    background-color: #000000;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+
+    opacity:0.9;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -250px;
+    margin-top: -250px;
+    width: 400px;
+    height: 300px;
+}
 .form-register
 {
     max-width: 330px;
