--- a/eSavjetovaliste/app/assets/javascripts/templates/home.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/home.html.erb
@@ -11,7 +11,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="#/home">
-                    <h1>eSavjetovaliste</h1>
+                    <h1 class="naslov1">eSavjetovaliste</h1>
                 </a>
             </div>
 
