--- a/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
@@ -1,64 +1,72 @@
-<div class="container">    
-    <div class="register-wall">
-		<div class="form-register" ng-controller="RegistrationController">
-		  <h1 class="text-center login-title"> Registracija </h1>
-		  	<form name="myForm">
-		  	<div class="input-prepend">
-      			<span class="add-on"><i class="icon-user"></i></span>
-			  	<input name="name" class="formr-control" type="text" placeholder="Ime"ng-model="user.name" required autofocus/> <br>
-				<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-				<span ng-show="myForm.user.$error.required">Unos imena je obavezan.</span>
-				</span>	
-		    </div>
+<head>
+	<script src='https://www.google.com/recaptcha/api.js'></script>
+</head>
+<body>
+	<div class="container">    
+	    <div class="register-wall">
+			<form class="form-register" ng-controller="RegistrationController">
+			  <h1 class="text-center login-title"> Registracija </h1>
+			  	<form name="myForm">
+			  	<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-user"></i></span>
+				  	<input name="name" class="formr-control" type="text" placeholder="Ime"ng-model="user.name" required autofocus/> <br>
+					<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
+					<span ng-show="myForm.user.$error.required">Unos imena je obavezan.</span>
+					</span>	
+			    </div>
 
-			<div class="input-prepend">
-      			<span class="add-on"><i class="icon-user"></i></span>
-			  	<input name="surname" type="text" class="formr-control" placeholder="Prezime" ng-model="user.surname" required/>
-			  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-			    <span ng-show="myForm.user.$error.required">Unos prezimena je obavezan.</span>
-			    </span>	
-			</div>
+				<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-user"></i></span>
+				  	<input name="surname" type="text" class="formr-control" placeholder="Prezime" ng-model="user.surname" required/>
+				  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
+				    <span ng-show="myForm.user.$error.required">Unos prezimena je obavezan.</span>
+				    </span>	
+				</div>
 
-			<div class="input-prepend">
-      			<span class="add-on"><i class="icon-briefcase"></i></span>
-			  	<input name="job" type="text" class="formr-control" placeholder= "Posao" ng-model="user.job" />
-			</div>
+				<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-briefcase"></i></span>
+				  	<input name="job" type="text" class="formr-control" placeholder= "Posao" ng-model="user.job" />
+				</div>
 
-			<div class="input-prepend">
-      			<span class="add-on"><i class="icon-map-marker"></i></span>
-			  	<input name="adress" type="text" class="formr-control" placeholder="Adresa" ng-model="user.adress" />
-			</div>
+				<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-map-marker"></i></span>
+				  	<input name="adress" type="text" class="formr-control" placeholder="Adresa" ng-model="user.adress" />
+				</div>
 
-			<div class="input-prepend">
-      			<span class="add-on"><i class="icon-home"></i></span>
-			  	<input name="phone" type="text" class="formr-control" placeholder="Telefon" ng-model="user.phone" />
-			</div>
+				<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-home"></i></span>
+				  	<input name="phone" type="text" class="formr-control" placeholder="Telefon" ng-model="user.phone" />
+				</div>
 
-			<div class="input-prepend">
-      			<span class="add-on"><i class="icon-envelope"></i></span>
-			  	<input name="email" type="text" class="formr-control" placeholder="E-mail" ng-model="user.email" required />
-			  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-			    <span ng-show="myForm.user.$error.required">Unos emaila je obavezan.</span>
-			    </span>	
-			</div>
+				<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-envelope"></i></span>
+				  	<input name="email" type="text" class="formr-control" placeholder="E-mail" ng-model="user.email" required />
+				  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
+				    <span ng-show="myForm.user.$error.required">Unos emaila je obavezan.</span>
+				    </span>	
+				</div>
 
-			<div class="input-prepend">
-      			<span class="add-on"><i class="icon-lock"></i></span>
-			  	<input name="password" type="password" class="formr-control" placeholder="Password" ng-model="user.password"  required/>
-			  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-			    <span ng-show="myForm.user.$error.required">Unos passworda je obavezan.</span>
-			    </span>	
-			</div>
+				<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-lock"></i></span>
+				  	<input name="password" type="password" class="formr-control" placeholder="Pasvord" ng-model="user.password"  required/>
+				  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
+				    <span ng-show="myForm.user.$error.required">Unos passworda je obavezan.</span>
+				    </span>	
+				</div>
 
-			<div class="input-prepend">
-      			<span class="add-on"><i class="icon-lock"></i></span>
-			  	<input name="passwordc" type="password" class="formr-control" placeholder= "Password" ng-model="user.password_confirmation" />
-			</div>
+				<div class="input-prepend">
+	      			<span class="add-on"><i class="icon-lock"></i></span>
+				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda pasvorda" ng-model="user.password_confirmation" />
+				</div>
 
-			<div class="actions">
-			  <button class="btn btn-lg btn-primary btn-block" ng-click="registerUser()"  ng-disabled="myForm.$invalid">Kreiraj</button>
+				<div class="g-recaptcha" data-sitekey="6Ldp3gQTAAAAADZoixiBzZZjNx58dk-c0UbWAK74"></div>
+				</br>
+
+				<div class="actions">
+				  <button class="btn btn-lg btn-primary btn-block" ng-click="registerUser()"  ng-disabled="myForm.$invalid">Kreiraj</button>
+				</div>
+			  </form>
 			</div>
-			</form>
 		</div>
 	</div>
-</div>
+</body>
