--- a/eSavjetovaliste/app/assets/javascripts/templates/changepass.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/changepass.html.erb
@@ -11,17 +11,17 @@
 
   		<div class="input-prepend">
 		<span class="add-on"><i class="icon-lock"></i></span>
-	  	<input name="passwordEx" type="password" class="formr-control" placeholder="Existing password" ng-model="user.password" />
+	  	<input name="passwordEx" type="password" class="formr-control" placeholder="Šifra" ng-model="user.password" />
 		</div>
 
   		<div class="input-prepend">
 		<span class="add-on"><i class="icon-lock"></i></span>
-	  	<input name="password" type="password" class="formr-control" placeholder="New password" ng-model="user.new_password" />
+	  	<input name="password" type="password" class="formr-control" placeholder="Nova šifra" ng-model="user.new_password" />
 		</div>
 
 		<div class="input-prepend">
 		<span class="add-on"><i class="icon-lock"></i></span>
-	  	<input name="passwordc" type="password" class="formr-control" placeholder= "Confirm new password" ng-model="user.new_password_confirmation" />
+	  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.new_password_confirmation" />
 		</div>
 
 		<div class="actions">
