--- a/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
@@ -48,7 +48,7 @@
 
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-lock"></i></span>
-				  	<input name="password" type="password" class="formr-control" placeholder="Pasvord" ng-model="user.password"  required/>
+				  	<input name="password" type="password" class="formr-control" placeholder="Šifra" ng-model="user.password"  required/>
 				  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
 				    <span ng-show="myForm.user.$error.required">Unos passworda je obavezan.</span>
 				    </span>	
@@ -56,7 +56,7 @@
 
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-lock"></i></span>
-				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda pasvorda" ng-model="user.password_confirmation" />
+				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
 				</div>
 
 				<div class="g-recaptcha" data-sitekey="6Ldp3gQTAAAAADZoixiBzZZjNx58dk-c0UbWAK74"></div>
