--- a/eSavjetovaliste/app/assets/javascripts/templates/inputs-password-reset.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/inputs-password-reset.html.erb
@@ -4,12 +4,12 @@
 	    	<h1 class="text-center login-title">eSavjetovaliste</h1>
 			<div class="input-prepend">
 	  			<span class="add-on"><i class="icon-lock"></i></span>
-			  	<input name="password" type="password" class="formr-control" placeholder="Password" ng-model="user.password" />
+			  	<input name="password" type="password" class="formr-control" placeholder="Nova šifra" ng-model="user.password" />
 			</div>
 
 			<div class="input-prepend">
 	  			<span class="add-on"><i class="icon-lock"></i></span>
-			  	<input name="passwordc" type="password" class="formr-control" placeholder= "Password Confirmation" ng-model="user.password_confirmation" />
+			  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
 			</div>
 
 	        <button class="btn btn-lg btn-primary btn-block" ng-click="doResetConfirm()"  ng-disabled="loginForm.$invalid">Promjena</button>
