--- a/eSavjetovaliste/app/assets/javascripts/templates/login.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/login.html.erb
@@ -8,7 +8,7 @@
     	</div>
 		  <div class="input-prepend">
 				<span class="add-on"><i class="icon-lock"></i></span>
-				<input type="password" class="form-control" placeholder="Password" ng-model="user.password" required>
+				<input type="password" class="form-control" placeholder="Šifra" ng-model="user.password" required>
 		  </div>
       <label class="checkbox pull-left">
           <input type="checkbox" value="remember-me">
