--- a/eSavjetovaliste/app/assets/javascripts/templates/inputs-password-reset.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/inputs-password-reset.html.erb
@@ -1,5 +1,6 @@
+<!--Form for password reset after mail is sent-->
 <div class="container">     
-	<div class="forgot-acc">
+	<div class="reset-pass">
 	    <div class="form-signin" ng-controller="InsertPwdForResetController">
 	    	<h1 class="text-center login-title">eSavjetovaliste</h1>
 			<div class="input-prepend">
