--- a/eSavjetovaliste/app/assets/javascripts/templates/login.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/login.html.erb
@@ -1,3 +1,4 @@
+<!--Login form-->
 <div class="container">      
   <div class="account-wall">
     <div class="form-signin" ng-controller="LoginController">
