--- a/eSavjetovaliste/app/assets/javascripts/templates/password-reset.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/password-reset.html.erb
@@ -1,3 +1,4 @@
+<!--Form for password reset after user hits forgot account button-->
 <div class="container">
   <div class="forgot-acc">
     <div class="form-signin" ng-controller="ResetController">
