--- a/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
@@ -1,4 +1,6 @@
+<!--Refistration form-->
 <head>
+	<!--link for recaptcha-->
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
@@ -58,7 +60,7 @@
 	      			<span class="add-on"><i class="icon-lock"></i></span>
 				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
 				</div>
-
+				<!--recaptcha-->
 				<div class="g-recaptcha" data-sitekey="6Ldp3gQTAAAAADZoixiBzZZjNx58dk-c0UbWAK74"></div>
 				</br>
 
