--- a/eSavjetovaliste/app/assets/javascripts/templates/home.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/home.html.erb
@@ -1,9 +1,10 @@
+<!--home page-->
 <head>
+    <!--font for icon in circle button on home page-->
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-
-
+    <!-- Navigation bar -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
@@ -14,14 +15,13 @@
                     <h1 class="naslov1">eSavjetovaliste</h1>
                 </a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		      <ul class="nav navbar-nav">
 		        <li class="active"><a href="#/home">Home</a></li>
-		        <li><a href="#/home">About</a></li>
-				<li><a href="#/home">Service</a></li>
-				<li><a href="#/home">Contact</a></li>
+                <li><a href="#/home">About</a></li>
+		        <li><a href="#/changepass">Change password</a></li>
+				<li><a href="#/home">Logout</a></li>
 		      </ul>
             </div>
             <!-- /.navbar-collapse -->
