--- a/eSavjetovaliste/app/assets/javascripts/templates/changepass.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/changepass.html.erb
@@ -2,33 +2,56 @@
 <div class="container">    
     <div class="change-wall">
 
-    <div class="form-register" ng-controller="ChangePassController">
-		  <h1 class="text-center login-title"> Promjena passworda </h1>
+    <form class="form-register" name="myForm" ng-controller="ChangePassController">
+    	<!--title-->
+		<h1 class="text-center login-title"> Promjena passworda </h1>
 
-    	<div class="input-prepend">
-		<span class="add-on"><i class="icon-envelope"></i></span>
-  		<input name="email" type="text" class="formr-control" placeholder="E-mail" ng-model="user.email" />
-  		</div>
-
-  		<div class="input-prepend">
-		<span class="add-on"><i class="icon-lock"></i></span>
-	  	<input name="passwordEx" type="password" class="formr-control" placeholder="Šifra" ng-model="user.password" />
-		</div>
-
-  		<div class="input-prepend">
-		<span class="add-on"><i class="icon-lock"></i></span>
-	  	<input name="password" type="password" class="formr-control" placeholder="Nova šifra" ng-model="user.new_password" />
-		</div>
-
+    	<!-- input email-->
 		<div class="input-prepend">
-		<span class="add-on"><i class="icon-lock"></i></span>
-	  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.new_password_confirmation" />
+	      	<span class="add-on"><i class="icon-envelope"></i></span>
+			<input name="email" type="email" class="formr-control" placeholder="E-mail" ng-model="user.email" required autofocus/><br>
+			<!--email validation (client side)-->
+			<span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
+				<span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
+				<span ng-show="myForm.email.$error.email">Format email addrese nije dobar.</span>
+			</span>	
 		</div>
 
+		<!-- input current password-->
+		<div class="input-prepend">
+	      	<span class="add-on"><i class="icon-lock"></i></span>
+			<input name="passwordEx" type="password" class="formr-control" placeholder="Trenutna šifra" ng-model="user.password"  required/><br>
+			<!--password validation (client side)-->
+			<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
+				<span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>
+			</span>	
+		</div>
+
+		<!-- input new password-->
+		<div class="input-prepend">
+	      	<span class="add-on"><i class="icon-lock"></i></span>
+			<input name="password" type="password" minlength="3" class="formr-control" placeholder="Nova šifra" ng-model="user.new_password" required/><br>
+			<!--password validation (client side)-->
+			<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
+				<span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od tri karaktera.
+			</span>	
+		</div>
+
+		<!-- input new password confirmation-->
+		<div class="input-prepend">
+	      	<span class="add-on"><i class="icon-lock"></i></span>
+			<input name="passwordc" type="password" minlength="3" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.new_password_confirmation" required/><br>
+			<!--password validation (client side)-->
+			<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
+				<span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od tri karaktera.
+			</span>	
+		</div>
+
+		<!--button submit-->
 		<div class="actions">
 			  <button class="btn btn-lg btn-primary btn-block" ng-click="changePass()"  ng-disabled="form-register.$invalid">Potvrdi</button>
 		</div>
 
-		</div>
+		</form>
     </div>
 </div>
