--- a/eSavjetovaliste/app/assets/javascripts/templates/password-reset.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/password-reset.html.erb
@@ -1,13 +1,23 @@
 <!--Form for password reset after user hits forgot account button-->
 <div class="container">
   <div class="forgot-acc">
-    <div class="form-signin" ng-controller="ResetController">
+    <form class="form-signin" name="myForm" ng-controller="ResetController">
+      <!--title-->
       <h1 class="text-center login-title">eSavjetovaliste</h1>
-			<div class="input-prepend">
-      	<span class="add-on"><i class="icon-envelope"></i></span>
-      	<input type="text" class="form-control" name="email" placeholder="Email" ng-model="user.email" required autofocus>
-    	</div>
+
+			<!-- input email-->
+      <div class="input-prepend">
+        <span class="add-on"><i class="icon-envelope"></i></span>
+        <input name="email" type="email" class="formr-control" placeholder="E-mail" ng-model="user.email" required autofocus/><br>
+        <!--email validation (client side)-->
+        <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
+          <span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
+          <span ng-show="myForm.email.$error.email">Format email addrese nije dobar.</span>
+        </span> 
+      </div>
+
+      <!--submit button-->
 	    <button class="btn btn-lg btn-primary btn-block" ng-click="doReset()"  ng-disabled="loginForm.$invalid">Potvrdi</button>
-    </div>
+    </form>
   </div>
 </div>
