--- a/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
+++ b/eSavjetovaliste/app/assets/javascripts/templates/register.html.erb
@@ -6,64 +6,84 @@
 <body>
 	<div class="container">    
 	    <div class="register-wall">
-			<form class="form-register" ng-controller="RegistrationController">
-			  <h1 class="text-center login-title"> Registracija </h1>
-			  	<form name="myForm">
+			<form class="form-register" name="myForm" ng-controller="RegistrationController">
+
+			  	<h1 class="text-center login-title"> Registracija </h1>
+
+			  	<!-- input name-->
 			  	<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-user"></i></span>
-				  	<input name="name" class="formr-control" type="text" placeholder="Ime"ng-model="user.name" required autofocus/> <br>
-					<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-					<span ng-show="myForm.user.$error.required">Unos imena je obavezan.</span>
+				  	<input name="name" pattern="^([A-z]){3,}$" maxlength="20" class="formr-control" type="text" placeholder="Ime" ng-model="user.name" required autofocus/>
+				  	<br>
+				  	<!--name validation (client side)-->
+					<span style="color:red" ng-show="myForm.name.$dirty && myForm.name.$invalid">
+						<span ng-show="myForm.name.$error.required">Unos imena je obavezan.</span>Ime mora sadržavati više od 3 karaktera.
 					</span>	
 			    </div>
 
+				<!-- input surname-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-user"></i></span>
-				  	<input name="surname" type="text" class="formr-control" placeholder="Prezime" ng-model="user.surname" required/>
-				  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-				    <span ng-show="myForm.user.$error.required">Unos prezimena je obavezan.</span>
+				  	<input name="surname" pattern="^([A-z]){3,}$" maxlength="25" type="text" class="formr-control" placeholder="Prezime" ng-model="user.surname" required/><br>
+				  	<!--surname validation (client side)-->
+				  	<span style="color:red" ng-show="myForm.surname.$dirty && myForm.surname.$invalid">
+				    	<span ng-show="myForm.surname.$error.required">Unos prezimena je obavezan.</span>Prezime mora sadržavati više od 3 karaktera.
 				    </span>	
 				</div>
 
+				<!-- input job-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-briefcase"></i></span>
-				  	<input name="job" type="text" class="formr-control" placeholder= "Posao" ng-model="user.job" />
+				  	<input name="job" type="text" pattern="^([A-z]){2,}$" maxlength="35" class="formr-control" placeholder= "Posao" ng-model="user.job" /><br>
+				  	<!--job validation (client side)-->
+				  	<span style="color:red" ng-show="myForm.job.$dirty && myForm.job.$invalid">Posao mora sadržavati više od 2 karaktera.
+				    </span>	
 				</div>
 
+				<!-- input adress-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-map-marker"></i></span>
 				  	<input name="adress" type="text" class="formr-control" placeholder="Adresa" ng-model="user.adress" />
 				</div>
 
+				<!-- input phone-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-home"></i></span>
 				  	<input name="phone" type="text" class="formr-control" placeholder="Telefon" ng-model="user.phone" />
 				</div>
 
+				<!-- input email-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-envelope"></i></span>
-				  	<input name="email" type="text" class="formr-control" placeholder="E-mail" ng-model="user.email" required />
-				  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-				    <span ng-show="myForm.user.$error.required">Unos emaila je obavezan.</span>
-				    </span>	
+				  	<input name="email" type="email" class="formr-control" placeholder="E-mail" ng-model="user.email" required /><br>
+				  	<!--email validation (client side)-->
+				  	<span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
+						<span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
+						<span ng-show="myForm.email.$error.email">Format email addrese nije dobar.</span>
+					</span>	
 				</div>
 
+				<!-- input password-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-lock"></i></span>
-				  	<input name="password" type="password" class="formr-control" placeholder="Šifra" ng-model="user.password"  required/>
-				  	<span style="color:red" ng-show="myForm.user.$dirty && myForm.user.$invalid">
-				    <span ng-show="myForm.user.$error.required">Unos passworda je obavezan.</span>
+				  	<input name="password" type="password" minlength="3" class="formr-control" placeholder="Šifra" ng-model="user.password"  required/><br>
+				  	<!--password validation (client side)-->
+				  	<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
+				    <span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od tri karaktera.
 				    </span>	
 				</div>
 
+				<!-- input password confirmation-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-lock"></i></span>
 				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
 				</div>
+
 				<!--recaptcha-->
 				<div class="g-recaptcha" data-sitekey="6Ldp3gQTAAAAADZoixiBzZZjNx58dk-c0UbWAK74"></div>
 				</br>
 
+				<!-- submit button-->
 				<div class="actions">
 				  <button class="btn btn-lg btn-primary btn-block" ng-click="registerUser()"  ng-disabled="myForm.$invalid">Kreiraj</button>
 				</div>
