--- a/app/assets/javascripts/templates/register.html.erb
+++ b/app/assets/javascripts/templates/register.html.erb
@@ -1,7 +1,7 @@
 <!--Refistration form-->
 <head>
 	<!--link for recaptcha-->
-	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<!--<script src='https://www.google.com/recaptcha/api.js'></script>-->
 </head>
 <body>
 	<div class="container">    
@@ -80,8 +80,8 @@
 				</div>
 
 				<!--recaptcha-->
-				<div class="g-recaptcha" data-sitekey="6LccAAUTAAAAAFP9BYFC4qFicss1-I2v4M9-sp1P"></div>
-				</br>
+				<!--<div class="g-recaptcha" data-sitekey="6LccAAUTAAAAAFP9BYFC4qFicss1-I2v4M9-sp1P"></div>
+				</br>-->
 
 				<!-- submit button-->
 				<div class="actions">
