--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -21,7 +21,7 @@
 		        <li class="active"><a>Home</a></li>
                 <li><a>About</a></li>
 		        <li><a ng-click="openChangePass()">Change password</a></li>
-				<li><a>Logout</a></li>
+				<li><a ng-click="logOut()">Logout</a></li>
 		      </ul>
             </div>
             <!-- /.navbar-collapse -->
