--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -32,7 +32,7 @@
     <!-- Section: intro -->
     <section id="intro" class="intro">
         <div class="slogan">
-            <h2>DOBRO DOŠLI!</h2>
+            <h2>DOBRO DOŠLI {{ userName }}</h2>
         </div>
         <div class="page-scroll">
             <a href="#/home" class="btn btn-circle">
